# unifsync-app

./: .gitignore  .prettierignore  components.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
data/: notes.json
src/: App.vue  home.vue  main.css  main.ts  tauri.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: env.rs  errors.rs  lib.rs  main.rs  notes.rs
src-tauri/src/logs/: Cargo.toml  lib.rs
src-tauri/src/logs/defs/: Cargo.toml  lib.rs
src-tauri/src/logs/macros/: Cargo.toml  lib.rs
src/assets/: index.css
src/components/ui/button/: index.ts
src/components/ui/separator/: Separator.vue
src/pages/: App.vue  home.vue  note.vue
